# app.py
@@ -1,8 +1,11 @@
+from datetime import datetime
 from flask import Flask,jsonify,request
-from models import Book,APIResponse,Author
+from models import Book,APIResponse,Author,User
 from database import init_db,db
-from service import BookService,AuthorService
+from service import BookService,AuthorService,UserService
 from flask_swagger_ui import get_swaggerui_blueprint
+import re
+from flask_jwt_extended import JWTManager, create_access_token, jwt_required
 
 app = Flask(__name__)
 init_db(app)
@@ -12,33 +15,147 @@ with app.app_context():
 SWAGGER_URL = "/swagger" 
 API_URL = "/static/swagger.json"  
 
-swagger_ui_blueprint = get_swaggerui_blueprint(SWAGGER_URL, API_URL)
+swagger_ui_blueprint = get_swaggerui_blueprint(SWAGGER_URL, API_URL,config={
+        "app_name": "Book API",
+        "validatorUrl": None,
+        "swaggerHeaders": [{"name": "Authorization", "value": "Bearer YOUR_JWT_TOKEN"}]
+})
 app.register_blueprint(swagger_ui_blueprint, url_prefix=SWAGGER_URL)
 
 
+app.config["JWT_SECRET_KEY"] = "THIS_IS_MY_BOOK_STORE_JWT_AUTHENTICATION_KEY"
+jwt = JWTManager(app)
+
+
+@app.route('/register', methods=['POST'])
+def register():
+    try:
+        data = request.get_json()
+
+        if "email" not in data or not data['email']:
+            response = APIResponse(None, f"Email is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+
+        if "password" not in data or not data['password']:
+            response = APIResponse(None, f"Password is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        EMAIL_REGEX = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$'
+        if not re.match(EMAIL_REGEX, data['email']):
+            response = APIResponse(None, f"Email must be valid.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        PASSWORD_REGEX = r'^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
+        if not re.match(PASSWORD_REGEX, data['password']):
+            response = APIResponse(None, f"Password must be at least 8 characters long, contain one uppercase letter, one lowercase letter, one digit, and one special character.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        user = User(email=data["email"])
+        user.set_password(data["password"])
+        if UserService.register(user):
+            response = APIResponse(None,"User registration successfully.",201,True)
+            return jsonify(response.to_dict()),201
+        
+        else :
+            response = APIResponse(None,"Email already register.",201,True)
+            return jsonify(response.to_dict()),201
+    
+    except:
+        response = APIResponse(None,"Error while registering user.",500,False)
+        return jsonify(response.to_dict()),500
+
+
+@app.route("/login", methods=["POST"])
+def login():
+    try:
+        data = request.json
+
+        if "email" not in data or not data['email']:
+            response = APIResponse(None, f"Email is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+
+        if "password" not in data or not data['password']:
+            response = APIResponse(None, f"Password is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        user = User(email=data["email"],password=data["password"])
+
+        if UserService.login(user):
+            access_token = create_access_token(identity=user.email)
+            response = APIResponse({"token":access_token}, f"Login successful.", 200, True)
+            return jsonify(response.to_dict()), 200 
+        else:
+            response = APIResponse(None, f"Invalid email & password.", 401, False)
+            return jsonify(response.to_dict()), 401 
+        
+    except:
+        response = APIResponse(None,"Error while loging user.",500,False)
+        return jsonify(response.to_dict()),500
+    
+
 @app.route('/books', methods=["GET"])
+@jwt_required()
 def get_all_books():
     try:
-        currentPage = int(request.args.get("currentPage")) 
+        if not request.args.get("currentPage"):
+            response = APIResponse(None, "CurrentPage is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+
+        if not request.args.get("rowsPerPage"):
+            response = APIResponse(None, "RowsPerPage is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+
+        currentPage = int(request.args.get("currentPage"))
         rowsPerPage = int(request.args.get("rowsPerPage"))
-        if currentPage<=0 or rowsPerPage<=0:
-            print(currentPage)
-            response = APIResponse(None,"Current page and rows per page must greater than 0.",400,False)
-            return jsonify(response.to_dict()),400
+        order_by = request.args.get("orderBy", "asc").lower() 
+        order_attribute = request.args.get("orderAttribute", "id").lower() 
+
+        start_date = request.args.get("startDate",None)
+        end_date = request.args.get("endDate",None)
+
+        if currentPage <= 0 or rowsPerPage <= 0:
+            response = APIResponse(None, "Current page and rows per page must be greater than 0.", 400, False)
+            return jsonify(response.to_dict()), 400
+
+        if order_by not in ["asc", "desc"]:
+            response = APIResponse(None, "Invalid orderBy value. Use 'asc' or 'desc'.", 400, False)
+            return jsonify(response.to_dict()), 400
         
-        data = BookService.get_all_books(currentPage,rowsPerPage)
+        if order_attribute not in ["id", "price"]:
+            response = APIResponse(None, "Invalid orderAttribute value. Use 'id' or 'price'.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        if start_date:
+            try:
+                parsed_start_date = datetime.strptime(start_date, "%Y-%m-%d").date()
+                start_date = parsed_start_date
+            except Exception as e:
+                print(e)
+                response = APIResponse(None, "Invalid start date format. Use YYYY-MM-DD.", 400, False)
+                return jsonify(response.to_dict()), 400           
+        if end_date:
+            try:
+                parsed_end_date = datetime.strptime(end_date, "%Y-%m-%d").date()
+                end_date = parsed_end_date
+            except:
+                response = APIResponse(None, "Invalid end date format. Use YYYY-MM-DD.", 400, False)
+                return jsonify(response.to_dict()), 400
+
+        data = BookService.get_all_books(currentPage, rowsPerPage,start_date,end_date, order_by,order_attribute)
         if data:
-            response = APIResponse(data,"Books fetched successfully.",200,True)
-            return jsonify(response.to_dict()),200
+            response = APIResponse(data, "Books fetched successfully.", 200, True)
+            return jsonify(response.to_dict()), 200
         else:
-            response = APIResponse(None,"No books available or invalid page number.",404,False)
-            return jsonify(response.to_dict()),404
-    except:
-        response = APIResponse(None,"Error while fetching books.",500,False)
-        return jsonify(response.to_dict()),500
-  
-    
+            response = APIResponse(None, "No books available or invalid page number.", 404, False)
+            return jsonify(response.to_dict()), 404
+    except Exception as e:
+        print(e)
+        response = APIResponse(None, "Error while fetching books.", 500, False)
+        return jsonify(response.to_dict()), 500
+
+
 @app.route('/books/author/<int:author_id>', methods=["GET"])
+@jwt_required() 
 def get_books_by_author(author_id):
     try:
         currentPage = int(request.args.get("currentPage")) 
@@ -49,18 +166,40 @@ def get_books_by_author(author_id):
             return jsonify(response.to_dict()),400
         
         data = BookService.get_books_by_author(author_id,currentPage,rowsPerPage)
-        if data:
+        if len(data["books"]) > 0:
             response = APIResponse(data,"Books fetched successfully.",200,True)
             return jsonify(response.to_dict()),200
         else:
-            response = APIResponse(None,"No books available or invalid page number.",404,False)
+            response = APIResponse(None,"No books available for author or invalid page number.",404,False)
             return jsonify(response.to_dict()),404
     except:
         response = APIResponse(None,"Error while fetching books.",500,False)
         return jsonify(response.to_dict()),500
 
 
+@app.route('/books/search',methods=["GET"])
+@jwt_required()
+def search_book():
+    try:
+        if not request.args.get("title"):
+            response = APIResponse(None, "Book title is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        title = request.args.get("title")
+        book = BookService.search_book(title.lower())
+        if book:
+            response = APIResponse(book,"Book fetched successfully.",200,True)
+            return jsonify(response.to_dict()),200
+        else:
+            response = APIResponse(None,"Book not found.",404,False)
+            return jsonify(response.to_dict()),404
+    except:
+        response = APIResponse(None,"Error while searching book.",500,False)
+        return jsonify(response.to_dict()),500
+
+
 @app.route('/books/<int:book_id>', methods=["GET"])
+@jwt_required() 
 def get_book(book_id):
     try:
         book = BookService.get_book(book_id)
@@ -76,6 +215,7 @@ def get_book(book_id):
 
 
 @app.route('/books', methods=["POST"])
+@jwt_required() 
 def add_book():
     try:
         data = request.get_json()
@@ -117,6 +257,7 @@ def add_book():
 
 
 @app.route('/books/<int:book_id>', methods=["PUT"])
+@jwt_required() 
 def update_book(book_id):
     try:
         data = request.get_json()
@@ -158,6 +299,7 @@ def update_book(book_id):
     
     
 @app.route('/books/<int:book_id>', methods=["DELETE"])
+@jwt_required() 
 def delete_book(book_id):
     try:
         deleted = BookService.delete_book(book_id)
@@ -173,6 +315,7 @@ def delete_book(book_id):
 
 
 @app.route('/authors', methods=["GET"])
+@jwt_required() 
 def get_all_authors():
     try:
         authors = AuthorService.get_all_authors()
@@ -188,20 +331,27 @@ def get_all_authors():
 
 
 @app.route('/authors', methods=["POST"])
+@jwt_required() 
 def add_author():
-    data = request.get_json()
+    try:
+        data = request.get_json()
 
-    if "name" not in data or not data["name"] :
-        response = APIResponse(None, f"Author name is required.", 400, False)
-        return jsonify(response.to_dict()), 400
+        if "name" not in data or not data["name"] :
+            response = APIResponse(None, f"Author name is required.", 400, False)
+            return jsonify(response.to_dict()), 400
+        
+        author = Author(name=data["name"])
+        AuthorService.add_author(author)
+
+        response = APIResponse(None,"Author added successfully",201,True)
+        return jsonify(response.to_dict()),201
     
-    author = Author(name=data["name"])
-    AuthorService.add_author(author)
-
-    response = APIResponse(None,"Author added successfully",201,True)
-    return jsonify(response.to_dict()),201
+    except:
+        response = APIResponse(None,"Error while adding author.",500,False)
+        return jsonify(response.to_dict()),500
 
 @app.route('/authors/<int:author_id>', methods=["DELETE"])
+@jwt_required() 
 def delete_author(author_id):
     try:
         deleted = AuthorService.delete_author(author_id)
