# models.py
@@ -1,5 +1,6 @@
 from database import db
 from datetime import datetime
+import bcrypt
 
 class Author(db.Model):
     __tablename__ = 'authors'
@@ -38,6 +39,21 @@ class Book(db.Model):
             "price": self.price,
             "created_at": self.created_at
         }
+    
+class User(db.Model):
+    __tablename__ = 'users'
+
+    id = db.Column(db.Integer, primary_key=True, autoincrement=True)
+    email = db.Column(db.String(100), nullable=False, unique=True)
+    password = db.Column(db.String(100), nullable=False)
+    active = db.Column(db.Boolean, nullable=False, default=True)
+
+    def set_password(self, password):
+        salt = bcrypt.gensalt()
+        self.password = bcrypt.hashpw(password.encode('utf-8'), salt).decode('utf-8')
+
+    def check_password(self, password):
+        return bcrypt.checkpw(password.encode('utf-8'), self.password.encode('utf-8'))
 
 class APIResponse:
     def __init__(self,data,message,status_code,success):
